tomar foto y otros cambios

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.finalmovil" >
-
+    package="com.example.finalmovil">
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FinalMovil" >
+        android:theme="@style/Theme.FinalMovil">
         <activity
-            android:name=".Menuprincipal"
-            android:exported="false"
-            android:label="@string/title_activity_menuprincipal"
-            android:theme="@style/Theme.FinalMovil.NoActionBar" />
+            android:name=".prueba"
+            android:exported="false" />
         <activity
             android:name=".Registrarse"
             android:exported="false"
@@ -21,7 +20,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.FinalMovilDos" >
+            android:theme="@style/Theme.FinalMovilDos">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
